[package]
name = "htmlua-parser"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
html5ever = "0.35.0"
kuchikiki = "0.8.2"
markup5ever = "0.11.0"
mlua = { version = "0.10.5", features = ["lua54", "vendored", "serialize"] }
pulldown-cmark = "0.13.0"
syntect = "5.2.0"
tendril = "0.4.3"


[lints.clippy]
pedantic = { level = "warn", priority = -1 }
